# OpenHonesty

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISH_INSTRUCTIONS.md  README.md  RELEASE_NOTES.md  run_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md  README-DESCRIPTION.md  REPOSITORY_DESCRIPTION.md
.github/workflows/: backend-ci.yml
backend/: hatch_build.py  pyproject.toml  tox.ini
backend/honesty/: __init__.py
backend/honesty/api/: server.py
backend/honesty/cli/: __init__.py  main.py
backend/honesty/data/: __init__.py  curation.py  dataset.py
backend/honesty/evaluation/: __init__.py  hallucination.py  truthfulness.py
backend/honesty/metrics/: __init__.py  benchmark.py  honesty_metrics.py
backend/honesty/training/: __init__.py  reward_model.py  rlhf.py
backend/honesty/utils/: __init__.py  logging.py
backend/tests/: test_api.py  test_cli_basic.py  test_data.py  test_evaluation.py  test_metrics.py  test_training.py
docker/: Dockerfile.backend  docker-compose.yml
docs/: api.md  architecture.md  usage.md
