[project]
name = "honesty-platform"
version = "0.1.0"
description = "A comprehensive platform for evaluating and training language models for honesty and truthfulness."
authors = [
    {name = "Nik Jois", email = "nikjois@llamasearch.ai"}
]
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dynamic = ["dependencies"]

[project.scripts]
honesty = "honesty.cli.main:main"

[tool.poetry]
packages = [{include = "honesty"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "2.0.1"
transformers = "4.30.2"
datasets = "2.12.0"
pydantic = "1.10.9"
fastapi = "0.96.0"
uvicorn = "0.22.0"
numpy = "1.24.3"
pandas = "2.0.2"
scipy = "1.10.1"
scikit-learn = "1.2.2"
matplotlib = "3.7.1"
tqdm = "4.65.0"
langchain = "0.0.267"
openai = "0.27.8"
huggingface-hub = "0.15.1"
ray = "2.5.1"
wandb = "0.15.4"
evaluate = "0.4.0"
jsonlines = "3.1.0"
rouge-score = "0.1.2"
nltk = "3.8.1"
faiss-cpu = "1.7.4"
spacy = "3.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "4.1.0"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.3.0"
pylint = "2.17.4"
flake8 = "6.0.0"
sphinx = "6.2.1"
sphinx-rtd-theme = "1.2.1"
pre-commit = "3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=honesty --cov-report=term-missing --cov-report=xml"